* reload.c: Fix formatting.
        * stmt.c: Fix formatting.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36051 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2000-08-29  Kazu Hirata  <kazu@hxi.com>
 
+	* reload.c: Fix formatting.
+
+	* stmt.c: Fix formatting.
+
 	* gcc.c: Fix formatting.
 
 2000-08-29  Zack Weinberg  <zack@wolery.cumb.org>
