--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-29  Richard Henderson  <rth@cygnus.com>
+
+	* reload.c (push_secondary_reload): Allow class == reload_class
+	if we're using a reload_in/out pattern.
+
 2000-08-29  Kazu Hirata  <kazu@hxi.com>
 
 	* reload.c: Fix formatting.
