* config/ia64/ia64.md (muldi3): Use grfr_register_operand         for the inputs.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36054 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -1509,10 +1509,12 @@
   "sub %0 = %2, %1, 1"
   [(set_attr "type" "A")])
 
+;; ??? Use grfr instead of fr because of virtual register elimination
+;; and silly test cases multiplying by the frame pointer.
 (define_insn "muldi3"
   [(set (match_operand:DI 0 "fr_register_operand" "=f")
-	(mult:DI (match_operand:DI 1 "fr_register_operand" "f")
-		 (match_operand:DI 2 "fr_register_operand" "f")))]
+	(mult:DI (match_operand:DI 1 "grfr_register_operand" "f")
+		 (match_operand:DI 2 "grfr_register_operand" "f")))]
   ""
   "xma.l %0 = %1, %2, f0%B0"
   [(set_attr "type" "F")])
