--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2000-08-29  Richard Henderson  <rth@cygnus.com>
 
+	* config/ia64/ia64.md (muldi3): Use grfr_register_operand
+	for the inputs.
+
+2000-08-29  Richard Henderson  <rth@cygnus.com>
+
 	* reload.c (push_secondary_reload): Allow class == reload_class
 	if we're using a reload_in/out pattern.
 
