--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -35,6 +35,13 @@
 	* lang-specs.h: Do not process -o or run the assembler if
 	-fsyntax-only.
 
+2000-08-16  Andrew Haley  <aph@cygnus.com>
+
+	* typeck.c (build_java_array_type): Rewrite code to do array
+	alignment.  Take into account back-end macros when aligning array
+	data.  Remove setting of TYPE_USER_ALIGN; Java doesn't allow the
+	user to set alignment. Fixes gcj/252 and 160.
+
 2000-08-09  Tom Tromey  <tromey@cygnus.com>
 
 	* parse.y (check_abstract_method_definitions): Now return `int'.
