--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2000-08-29  J. David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* Makefile.in: Revamp handling of cflags to allow different WARN_CFLAGS
+	for compilations in stage 1 and subsequent stages, respectively.
+	* configure.in (vax): Add compiler-dependent CFLAGS for stage 1.
+	* configure: Rebuilt.
+	* x-vax, x-vax-gcc: Deleted.
+
 2000-08-29  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* c-common.c (declare_function_name): Use func_id_node,
