--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-30  Tom Tromey  <tromey@cygnus.com>
+
+	* Makefile.in: Rebuilt.
+	* Makefile.am (AM_CXXFLAGS): Added -fdollars-in-identifiers.
+
 2000-08-28  Tom Tromey  <tromey@cygnus.com>
 
 	* gnu/gcj/awt/BitMaskExtent.java, gnu/gcj/awt/Buffers.java,
