--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Wed 30-Aug-2000 23:18:59 BST  Neil Booth  <NeilB@earthling.net>
+
+	* contrib.texi: Add self.
+
 2000-08-30  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/sh/sh.md (cmpeqsi_ior_t, cmpeqsi_and_t): New insns.
