2000-08-22  Philipp Thomas  <pthomas@suse.de>             Masanobu Yuhara <yuhara@flab.fujitsu.co.jp>
	* gmicro.h (TARGET_SWITCHES): Add descriptions and mark them
	for translation.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36078 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-22  Philipp Thomas  <pthomas@suse.de>
+            Masanobu Yuhara <yuhara@flab.fujitsu.co.jp>
+
+	* gmicro.h (TARGET_SWITCHES): Add descriptions and mark them
+	for translation.
+
 2000-08-30  Greg McGary  <greg@mcgary.org>
 
 	* Makefile.in (fixinc.sh): Pass CC, CFLAGS and LDFLAGS to mkfixinc.sh
