--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,16 @@
+2000-08-31  Geoffrey Keating  <geoffk@cygnus.com>
+
+	* stmt.c (expand_asm_operands): Twiddle generating_concat_p
+	so that CONCATs are not generated for ASMs.
+	* emit-rtl.c (gen_reg_rtx): Don't generate CONCATs when
+	not generating_concat_p.
+	* function.c (pop_function_context_from): Reset
+	generating_concat_p.
+	(prepare_function_start): Likewise.
+	* rtl.c (generating_concat_p): Define.
+	* rtl.h (generating_concat_p): Declare.
+	* toplev.c (rest_of_compilation): No CONCATs after RTL generation.
+
 2000-08-22  Philipp Thomas  <pthomas@suse.de>
             Masanobu Yuhara <yuhara@flab.fujitsu.co.jp>
 
