* arm.md: Use no_new_pseudos to determine when it is safe         to create new pseudo registers.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36090 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2000-08-31  Jeff Law <law@cygnus.com>
 
+	* arm.md: Use no_new_pseudos to determine when it is safe
+	to create new pseudo registers.
+
         * arm.c (legitimize_pic_address): Use no_new_pseudos to determine
         when we can safely allocate new registers.
 
