--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-01  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.old-deja/g++.ns/scoped1.C: New test.
+
 2000-08-30  Alexandre Oliva  <aoliva@redhat.com>
 
 	* lib/g++.exp: Support testing already-installed GCC.
