--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,10 @@
 2000-09-01  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* parse.y (named_class_head): Check for TYPENAME_TYPE. Simplify
+	union tag mismatch error reporting.	
+
+2000-09-01  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* call.c (build_scoped_method_call): Check it is not a namespace.	
 
 2000-08-30  Jason Merrill  <jason@redhat.com>
