--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2000-09-01  Andrew Haley  <aph@redhat.com>
+
+        * java/io/StreamTokenizer.java: Don't throw a
+        NumberFormatException if a field is numeric as far as the
+        StreamTokenizer is concerned but not as far as Double.valueOf() is
+        concerned: return a zero instead.	
+
 2000-08-30  Tom Tromey  <tromey@cygnus.com>
 
 	* Makefile.in: Rebuilt.
