* expr.c (clear_storage): Don't use emit_move_insn unless 	either BLKmode or proper size. 	(store_constructor): Don't call clear_storage if REG of wrong size.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36101 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 Fri Sep  1 10:59:47 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
+	* expr.c (clear_storage): Don't use emit_move_insn unless
+	either BLKmode or proper size.
+	(store_constructor): Don't call clear_storage if REG of wrong size.
+
 	* flow.c (init_propagate_block_info): Don't mark frame dead at end
 	of function if returns wiht stack pointer depressed.
 
