Fix ia64-linux miscompilation or tcl/generic/tclCompExpr.c 	* loop.c (check_final_value): Check for biv use before checking for 	giv use.  Check for both biv and giv uses.  Always set last_giv_use 	if there is a giv use.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36104 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-09-01  Jim Wilson  <wilson@cygnus.com>
+
+	* loop.c (check_final_value): Check for biv use before checking for
+	giv use.  Check for both biv and giv uses.  Always set last_giv_use
+	if there is a giv use.
+
 2000-09-01  Richard Henderson  <rth@cygnus.com>
 
 	* config/ia64/ia64.md (mulsi3): Use grfr_register_operand.
