--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -70,6 +70,8 @@
 ;;	2	insn_group_barrier
 ;;	5	set_bsp
 ;;	7	pred.rel.mutex
+;;	8	pred.safe_across_calls all
+;;	9	pred.safe_across_calls normal
 
 ;; ::::::::::::::::::::
 ;; ::
@@ -3953,3 +3955,22 @@
   ".pred.rel.mutex %0, %I0"
   [(set_attr "type" "unknown")
    (set_attr "predicable" "no")])
+
+(define_insn "safe_across_calls_all"
+  [(unspec_volatile [(const_int 0)] 8)]
+  ""
+  ".pred.safe_across_calls p1-p63"
+  [(set_attr "type" "unknown")
+   (set_attr "predicable" "no")])
+
+(define_insn "safe_across_calls_normal"
+  [(unspec_volatile [(const_int 0)] 9)]
+  ""
+  "*
+{
+  emit_safe_across_calls (asm_out_file);
+  return \"\";
+}"
+  [(set_attr "type" "unknown")
+   (set_attr "predicable" "no")])
+
