* fix-header.c (write_rbrac): Add putc and getc to list of         functions to protect against prior definition as a macro.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36108 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-01  Fred Fish  <fnf@be.com>
+
+	* fix-header.c (write_rbrac): Add putc and getc to list of
+	functions to protect against prior definition as a macro.
+ 
 2000-09-01  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* c-common.h (enum c_tree_index): Add CTI_C_SIZE_TYPE.
