--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-01  Alexandre Oliva  <aoliva@redhat.com>
+
+	* gcc.c-torture/compile/20000827-1.c: New test.
+
 2000-09-01  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/format-diag-1.c: New test.
