--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,19 @@
+2000-09-01  Alexandre Oliva  <aoliva@redhat.com>
+
+	* rtl.h (ASM_OPERANDS_INPUT_CONSTRAINT_EXP): New macro.
+	* gcse.c (hash_string_1): New function.
+	(hash_expr_1) <ASM_OPERANDS>: Disregard filename and line number.
+	(expr_equiv_p) <ASM_OPERANDS>: Likewise.
+	* cse.c (rtx_cost): Don't increase the cost of ASM_OPERANDS.
+	(canon_hash_string): New function.
+	(canon_hash) <ASM_OPERANDS>: Disregard filename and line number.
+	(exp_equiv_p) <ASM_OPERANDS>: Likewise.
+	(fold_rtx): Use ASM_OPERANDS accessor macros.
+	* emit-rtl.c (copy_insn_1): Likewise.
+	* integrate.c (copy_rtx_and_substitute): Likewise.
+	* stmt.c (expand_asm_operands): Likewise.  Give an
+	ASM_OPERANDS rtx the mode of the output reg being set from it.
+
 2000-09-01  Fred Fish  <fnf@be.com>
 
 	* fix-header.c (write_rbrac): Add putc and getc to list of
