* config/avr/avr.md ("*tablejump_lib"): New pattern. 	(call_value_insn): Right length claculation. 	(call_insn): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36119 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Sun Sep  3 13:10:56 2000  Denis Chertykov  <denisc@overta.ru>
+
+	* config/avr/avr.md ("*tablejump_lib"): New pattern.
+	(call_value_insn): Right length claculation.
+	(call_insn): Likewise.
+
 2000-09-02  Marek Michalkiewicz  <marekm@linux.org.pl>
 
 	* config/avr/avr-protos.h, config/avr/avr.c (unique_section,
