* Makefile.in: Rebuilt. 	* Makefile.am (GCJCOMPILE): Use -fclasspath, not the CLASSPATH 	environment variable.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36126 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2000-09-02  Tom Tromey  <tromey@cygnus.com>
+
+	* Makefile.in: Rebuilt.
+	* Makefile.am (GCJCOMPILE): Use -fclasspath, not the CLASSPATH
+	environment variable.
+
 2000-09-01  Andrew Haley  <aph@redhat.com>
 
         * java/io/StreamTokenizer.java: Don't throw a
