* gcc.dg/20000904-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36130 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2000-09-04  Jakub Jelinek  <jakub@redhat.com>
 
+	* gcc.dg/20000904-1.c: New test.
+
+2000-09-04  Jakub Jelinek  <jakub@redhat.com>
+
 	* gcc.dg/cpp/paste8.c: New test.
 
 2000-09-01  Alexandre Oliva  <aoliva@redhat.com>
