--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-04  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* decl2.c (arg_assoc): Deal with COMPONENT_REFs inside
+	TEMPLATE_ID_EXPRs.
+
 2000-09-03  Mark Mitchell  <mark@codesourcery.com>
 
 	* operators.def (ALIGNOF_EXPR, MAX_EXPR, MIN_EXPR): Change
