--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-04  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.old-deja/g++.pt/koenig1.C: New test.
+
 2000-09-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/20000904-1.c: New test.
