--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,10 @@
 2000-09-04  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* pt.c (lookup_template_class): Remove abort.
+	* tree.c (get_type_decl): Allow error_mark_node.
+
+2000-09-04  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* decl2.c (arg_assoc): Deal with COMPONENT_REFs inside
 	TEMPLATE_ID_EXPRs.
 
