* g++.old-deja/g++.pt/crash56.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36135 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2000-09-04  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* g++.old-deja/g++.pt/crash56.C: New test.
+
+2000-09-04  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* g++.old-deja/g++.pt/koenig1.C: New test.
 
 2000-09-04  Jakub Jelinek  <jakub@redhat.com>
