* init.c (resolve_offset_ref): Deal with TEMPLATE_ID_EXPR.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36136 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,9 @@
 2000-09-04  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* init.c (resolve_offset_ref): Deal with TEMPLATE_ID_EXPR.
+
+2000-09-04  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* pt.c (lookup_template_class): Remove abort.
 	* tree.c (get_type_decl): Allow error_mark_node.
 
