--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-04  Andrew Haley  <aph@redhat.com>
+
+	* dwarf2out.c: (stack_adjust_offset): New prototype.
+
 Wed Jan  1 00:23:59 MET 1997  Jan Hubicka  <jh@suse.cz>
 
 	* combine.c (make_extraction): Fix rtx_cost comparison to
